clusters/bale/proxpi/proxpi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxpi
  namespace:
  labels:
    app: proxpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxpi
  template:
    metadata:
      labels:
        app: proxpi
    spec:
      containers:
        - name: proxpi
          image: epicwink/proxpi
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: "/cache"
              name: cache-volume
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: cache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: proxpi
  namespace: proxpi
spec:
  selector:
    app: proxpi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxpi
  namespace:
spec:
  ingressClassName: nginx
  rules:
    - host: proxpi.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxpi
                port:
                  number: 80
    - host: proxpi.etheredge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxpi
                port:
                  number: 80
